<resources>
    <string name="app_name">Outfit Search</string>
    <string name="action_settings">Settings</string>

    <!-- Globally used single-word strings -->
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Browse outfits fragment -->
    <string name="browse_fragment_label">Browse Outfits</string>
    <string name="add_outfit_option">Add outfit</string>
    <string name="no_clothing_items_placeholder">No clothing items have been listed - click to add some.</string>
    <string name="content_description_clear_search">Clear search bar</string>
    <string name="search_bar_hint">Find outfits with this clothing item/s…</string>
    <string name="all_spinner_option">All</string>
    <string name="no_search_results_message">No outfits were found which matched your search query/s and filters.\n\n
        Try modifying your search, or coming up with new outfits!</string>
    <string name="no_outfits_exist">You don\'t have any outfits to display here.
        \nTap the "+" icon in the top right corner to add your first outfit!</string>

    <!-- View outfit fragment -->
    <string name="view_outfit_fragment_label">View Outfit</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="browse_button">Browse Photos</string>
    <string name="content_description_outfit_photo">Photo of outfit</string>
    <string name="delete_outfit_option">Delete outfit</string>
    <string name="add_button">Add</string>
    <string name="new_item_of_clothing_hint">New item of clothing…</string>
    <string name="formality_label">Formality</string>
    <string name="season_label">Season</string>
    <string name="delete_button">Delete button</string>

    <string name="clothing_items_used">Clothing Items Used</string>
    <string name="delete_outfit_warning">Delete Outfit</string>
    <string name="delete_outfit_warning_prompt">Are you sure you want to delete this outfit?</string>
    <string name="delete_outfit_success">Outfit deleted.</string>
    <string name="add_new_spinner_option">Add new…</string>
    <string name="new_season_title">Add new season</string>
    <string name="new_season_hint">Enter a new season…</string>
    <string name="new_formality_hint">Enter a new formality level…</string>
    <string name="new_formality_title">Add formality level</string>
    <string name="no_selection_placeholder">-</string>
    <string name="take_photo_error_message">Something went wrong when trying to take a photo - please try again later.</string>
    <string name="camera_permission_denied_message">Since you have denied camera permission, you will be unable to use the camera from this app.\n
        You can still choose existing images from the gallery using the "BROWSE" button, or modify this permission later from your Settings app.</string>
    <string name="ok">Ok</string>
    <string name="outfit_search_hint">Enter one or more keywords to match clothing items, separated by commas.</string>
    <string name="search_filters_heading">Filter outfits by</string>
    <string name="double_click_item_hint">Tap again to search for other outfits using this item…</string>
    <string name="long_click_item_hint">Editing this item\'s name will update it everywhere it is used.</string>
    <string name="empty_outfit_deleted_toast">Outfit draft discarded since it had no content.</string>
    <string name="choose_for_me_button">Choose for me!</string>
    <string name="error_no_clothing_item_name">Please enter a name for the clothing item.</string>

</resources>