<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.browse.BrowseFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:elevation="0dp"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/default_margin"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin">

                    <MultiAutoCompleteTextView
                        android:id="@+id/search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/searchview_backgroud"
                        android:completionThreshold="1"
                        android:drawableStart="@drawable/search_icon_24"
                        android:drawablePadding="4dp"
                        android:hint="@string/search_bar_hint"
                        android:iconifiedByDefault="false"
                        android:imeOptions="actionSearch"
                        android:inputType="textAutoCorrect"
                        android:maxLines="5"
                        android:padding="12dp"
                        android:paddingEnd="34dp"
                        tools:text="fniuewieuhiewrwucfiwehcwencfgwencfgiwecnfgiwucnfiewcniwwnefuwiancf" />

                    <ImageButton
                        android:id="@+id/clear_search_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:visibility="gone"
                        android:contentDescription="@string/content_description_clear_search"
                        android:layout_gravity="end|center_vertical"
                        android:background="@drawable/x_icon_24" />
                </FrameLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_category_spinners"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin">
                    <TextView
                        android:id="@+id/filters_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:text="@string/search_filters_heading"
                        style="@style/normalText"/>

                    <TextView
                        android:id="@+id/season_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/season_label"
                        app:layout_constraintEnd_toStartOf="@+id/formality_label"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/filters_heading" />

                    <TextView
                        android:id="@+id/formality_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/formality_label"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/season_label"
                        app:layout_constraintTop_toTopOf="@id/season_label" />

                    <Spinner
                        android:id="@+id/spinner_season"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginEnd="4dp"
                        app:layout_constraintEnd_toStartOf="@+id/spinner_formality"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/season_label" />

                    <Spinner
                        android:id="@+id/spinner_formality"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        app:layout_constraintBottom_toBottomOf="@+id/spinner_season"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/spinner_season"
                        app:layout_constraintTop_toTopOf="@+id/spinner_season" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <Button
                    android:id="@+id/button_choose_for_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_for_me_button"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginEnd="@dimen/default_margin" />
                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >
        <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/textview_no_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:text="@string/no_search_results_message"
            android:textAlignment="center"
            android:visibility="visible"
            tools:visibility="gone"
            style="@style/normalText"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_outfits"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:visibility="visible"
            android:layout_weight="1"
            tools:listitem="@layout/recyclerview_item_outfit" />
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>